# corvo

./: .gitignore  .goreleaser.yaml  LICENSE.md  METRICS.md  Makefile  README.md  RELEASING.md  buf.gen.yaml  go.mod  go.sum  install.sh
.claude/skills/: corvo-architecture.md  corvo-conventions.md  corvo-performance.md  corvo-runbook.md  corvo-schema.md  corvo-testing.md  corvo-usage.md
.github/workflows/: benchmark.yml  ci.yml  release.yml  sdk-release.yml
cmd/bench/: main.go
cmd/corvo/: cli.go  cmd_admin.go  cmd_approval_policy.go  cmd_bench.go  cmd_budget.go  cmd_jobs.go  cmd_queues.go  cmd_search.go  cmd_seed.go  cmd_usage.go  docs.go  main.go
cmd/jobbie/: cli.go  cmd_admin.go  cmd_cache.go  cmd_jobs.go  cmd_providers.go  cmd_queues.go  cmd_scores.go  cmd_search.go  cmd_seed.go  main.go
deploy/: Dockerfile  Dockerfile.goreleaser  docker-compose.yml
deploy/cloud/: docker-compose.yml  nginx.conf
docs/: AI.md  AUTH.md  BENCHMARKS.md  CLOUD.md  DESIGN.md  ENTERPRISE.md  PHASE1.md  PHASE2.md  ai-extras.md  append-log-lifecycle-plan.md  architecture.md  claude-refactor-pebble-raft-sqlite.md  failure-modes.md  features-2026-02-17.md  migration.md  operating-corvo.md  perf-analysis.md  perf-fetch-ack-bottleneck.md  performance.md  ui.md
internal/enterprise/: license.go
internal/kv/: encoding.go  encoding_test.go  keys.go  keys_test.go
internal/observability/: otel.go
internal/raft/: bench_test.go  cluster.go  cluster_test.go  config.go  direct.go  eventlog.go  fsm.go  fsm_chain_test.go  fsm_enterprise.go  fsm_multi_test.go  fsm_ops.go  fsm_snapshot.go  fsm_sqlite.go  job_codec.go  multi_cluster.go  ops.go  raft_store.go  raft_store_badger.go  raft_store_pebble.go  transport.go
internal/rpc/: server.go  server_test.go
internal/rpcconnect/: server.go
internal/scheduler/: scheduler.go  scheduler_test.go
internal/search/: builder.go  builder_test.go  payload_jq.go
internal/server/: .swaggo  auth.go  auth_oidc.go  auth_rbac.go  bulk_async.go  docs.go  handlers_admin.go  handlers_approval.go  handlers_audit.go  handlers_auth.go  handlers_backup_billing.go  handlers_budget.go  handlers_bulk_async.go  handlers_debug.go  handlers_debug_windows.go  handlers_manage.go  handlers_metrics_prom.go  handlers_namespaces.go  handlers_org.go  handlers_providers.go  handlers_scores.go  handlers_search_fulltext.go  (+14 more)
scripts/: bench-baseline.sh  bench-compare.sh  bench-modes.sh  bench-profile.sh
sdk/haskell/: README.md  corvo-client.cabal  jobbie-client.cabal
sdk/haskell/src/Corvo/: Client.hs
sdk/haskell/src/Jobbie/: Client.hs
sdk/python/: README.md  pyproject.toml
sdk/python-worker/: README.md  pyproject.toml
sdk/python-worker/corvo_worker/: __init__.py  worker.py
sdk/python-worker/jobbie_worker/: __init__.py  worker.py
sdk/python/corvo_client/: __init__.py  client.py
sdk/python/jobbie_client/: __init__.py  client.py
sdk/rust/: Cargo.toml  README.md
sdk/rust/src/: lib.rs
ui/: index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.lib.json  vite.config.lib.ts  vite.config.ts
(+189 files in other folders)
