[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "corvo-worker"
version = "0.1.0"
description = "Python worker runtime for Corvo"
readme = "README.md"
requires-python = ">=3.9"
dependencies = ["corvo-client>=0.1.0"]

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["corvo_worker*"]
