[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "corvo-client"
version = "0.1.0"
description = "Python client for Corvo"
readme = "README.md"
requires-python = ">=3.9"
dependencies = ["requests>=2.31.0"]

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["corvo_client*"]
